--- a/Resources/Prototypes/Floof/Entities/Objects/Consumable/Drinks/drinks.yml
+++ b/Resources/Prototypes/Floof/Entities/Objects/Consumable/Drinks/drinks.yml
@@ -256,6 +256,22 @@
 
 - type: entity
   parent: DrinkGlass
+  id: DrinkLexisLastHopeGlass
+  suffix: lexi's last hope
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: LexisLastHope
+          Quantity: 30
+  - type: Icon
+    sprite: Floof/Objects/Consumable/Drinks/lexislasthope.rsi
+    state: icon
+
+- type: entity
+  parent: DrinkGlass
   id: DrinkLoversKissGlass
   suffix: lovers kiss
   components:
