--- a/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
@@ -141,6 +141,16 @@
   components:
   - type: Bloodstream
     bloodMaxVolume: 650
+  - type: HTN
+    rootTask:
+      task: SimpleHostileCompound
+    blackboard:
+      NavInteract: !type:Bool
+        true
+      NavPry: !type:Bool
+        true
+      NavSmash: !type:Bool
+        true
   - type: NpcFactionMember
     factions:
     - NanoTrasen
@@ -186,7 +196,7 @@
       fix1:
         shape:
           !type:PhysShapeCircle
-          radius: 0.20
+          radius: 0.40
         density: 100
         mask:
         - FlyingMobMask
@@ -201,11 +211,12 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      150: Critical
+      100: Critical
       200: Dead
   - type: SlowOnDamage
     speedModifierThresholds:
-      100: 0.7
+      60: 0.8
+      80: 0.6
   - type: Metabolizer
     solutionOnBody: false
     updateInterval: 0.25
@@ -229,10 +240,10 @@
     soundHit:
       path: /Audio/Weapons/Xeno/alien_claw_flesh3.ogg
     damage:
-      groups:
-        Piercing: 10
+      types:
+        Piercing: 5
+        Slash: 5
   - type: Devourer
-    foodPreference: Humanoid
     shouldStoreDevoured: true
     chemical: Ichor
     healRate: 15.0
