--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -342,6 +342,11 @@
         - Bottle
         - Syringe
         - CigPack
+        - Dropper
+        - WeedSpray
+        - PestSpray
+        - PlantBGoneSpray
+        - BotanySwab
       components:
         - Seed
         - Smokable
